--- a/Frontend/Styles/style.css
+++ b/Frontend/Styles/style.css
@@ -1,19 +1,36 @@
+.table-container {
+    width: 900px; 
+    height: 500px; 
+    
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    
+    margin: auto;
+}
+
+#searchbox {
+    width: 30%;
+}
+
 table {
     border-collapse: collapse;
+    padding: 1rem;
 }
 
 td {
     width: 100px;
     height: 50px;
     text-align: center;
-    border-right: 2px solid #B4CDED;
-    border-left: 2px solid #B4CDED;
 }
 
-tr {
-    border-bottom: 2px solid #B4CDED;
+td, th {
+    text-align: left;
+    text-transform: capitalize;
 }
 
 tr:nth-child(even) {
-    background-color: #BFCC94;
+    background-color: #d4d4d4;
   }
