--- a/Frontend/Styles/stock.css
+++ b/Frontend/Styles/stock.css
@@ -4,6 +4,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+    color: white;
+}
+
+a:hover {
+    opacity: 50%;
+}
+
 .table-container {
     text-align: center;
 
